# fonzie

./: .coveragerc  .dockerignore  .env  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CHANGELOG.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  docker-compose.yml  dredd.yml  fonzie-v1-0.apib  manage.py  openedx.apib  openedx.yaml  package.json  pylintrc  requirements-dev.txt  setup.cfg  setup.py  test_settings.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.tx/: config
docker/files/etc/nginx/conf.d/: lms.conf
docs/: Makefile  conf.py  developer_guide.rst  getting_started.rst  index.rst  internationalization.rst  make.bat  testing.rst
edx-platform/config/: docker_run_lms.py
edx-platform/config/cms/: docker_run_development.py
edx-platform/config/lms/: docker_run_development.py  docker_run_test.py
edx-platform/lms/: api_urls.py  urls.py
env.d/: dev
fonzie/: __init__.py  apps.py  models.py  serializers.py  urls.py
fonzie/urls/: __init__.py  acl.py  lms_root.py  schema.py  status.py  students.py  user.py
fonzie/views/: acl.py  schema.py  status.py  students.py  user.py
openedx/: Dockerfile  docker-compose.yml  manage.py  requirements.txt
openedx/env.d/: development
openedx/openedx/: settings.py  urls.py  wsgi.py
openedx/student/: admin.py  models.py
openedx/student/migrations/: 0001_initial.py
requirements/: base.in  dev.txt  doc.txt  quality.txt  test.in  test.txt
tests/: __init__.py  test_models.py
tests/views/: test_acl.py  test_schema.py  test_status.py  test_user.py  test_versioning.py
