[isort]
line_length = 120
known_edx =
known_django = django
known_djangoapp = model_utils
known_first_party = fonzie
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,DJANGOAPP,EDX,FIRSTPARTY,LOCALFOLDER

[metadata]
name = fonzie
version = 0.1.0
description = A FUN API for Open edX
long_description = file: README.rst
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/fonzie
license= AGPL 3.0
keywords = Django, Django Rest Framework, API, Open edX
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
install_requires =
    Django==1.8.18
    djangorestframework==3.2.3
packages = find:
zip_safe = False

[options.extras_require]
dev =
    diff-cover
    edx-lint
    edx-i18n-tools
    pip-tools
    tox
    tox-battery
    twine
    wheel
doc =
    doc8
    edx_sphinx_theme
    readme_renderer
    Sphinx
quality =
    caniusepython3
    edx-lint
    isort
    pycodestyle
    pydocstyle
    pyroma
test =
    pytest
    pytest-cov
    pytest-django
    requests
travis =
    codecov
    tox
    tox-battery

[options.packages.find]
exclude =
    node_modules
    test_utils
    tests

[wheel]
universal = 1
