;;
;; Fonzie package
;;
[metadata]
name = fonzie
version = 0.2.0
description = A FUN API for Open edX
long_description = file: README.rst
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/fonzie
license= AGPL 3.0
keywords = Django, Django Rest Framework, API, Open edX
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
install_requires =
    # Add direct dependencies here
packages = find:
zip_safe = False

[options.extras_require]
dev =
    diff-cover
    edx-lint
    edx-i18n-tools
    twine
    wheel
doc =
    doc8
    edx_sphinx_theme
    readme_renderer
    Sphinx>=1.3
quality =
    caniusepython3
    edx-lint
    isort
    pycodestyle
    pydocstyle
    pyroma
test =
    factory-boy
    nose
    pytest
    pytest-cov
    pytest-django
    requests
ci =
    codecov
    sphinx
    twine

[options.packages.find]
exclude =
    node_modules
    tests

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[doc8]
max-line-length = 120

[isort]
line_length = 120
known_edx =
known_django = django
known_djangoapp = model_utils
known_first_party = fonzie
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,DJANGOAPP,EDX,FIRSTPARTY,LOCALFOLDER

[pycodestyle]
exclude = .git,.tox,migrations
max-line-length = 120

[pydocstyle]
; D101 = Missing docstring in public class
; D104 = Missing docstring in public package
; D107 = Missing docstring in __init__
; D200 = One-line docstring should fit on one line with quotes
; D203 = 1 blank line required before class docstring
; D212 = Multi-line docstring summary should start at the first line
ignore = D101,D104,D107,D200,D203,D212
match-dir = (?!migrations)

[tool:pytest]
addopts =
    --reuse-db
    --no-migrations
    --cov /edx/app/fonzie/fonzie
    --cov-report term-missing
    --cov-report xml
testpaths =
    /edx/app/fonzie/tests
