;;
;; Fonzie package
;;
[metadata]
name = fonzie
version = 0.5.0
description = A FUN API for Open edX
long_description = file: README.rst
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/fonzie
license= AGPL 3.0
keywords = Django, Django Rest Framework, API, Open edX
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
install_requires =
    # Add direct dependencies here
    djangorestframework-simplejwt
packages = find:
zip_safe = False

[options.extras_require]
dev =
    diff-cover==4.0.0
    edx-lint==1.4.1
    edx-i18n-tools==0.4.5
    twine==1.15.0
    wheel
doc =
    doc8==0.8.1
    edx_sphinx_theme==1.6.1
    readme_renderer==28.0
    Sphinx==1.8.5
quality =
    bandit==1.6.2
    caniusepython3==7.3.0
    edx-lint==1.4.1
    isort==4.3.21
    pycodestyle==2.6.0
    pydocstyle==3.0.0
    pyroma==2.6
test =
    factory-boy==2.12.0
    nose==1.3.7
    pytest==4.6.11
    pytest-cov==2.11.1
    pytest-django==3.10.0
    requests==2.9.1
ci =
    codecov==2.1.13
    sphinx==1.8.5
    twine==1.15.0

[options.packages.find]
exclude =
    node_modules
    tests

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[doc8]
max-line-length = 120

[isort]
line_length = 120
known_edx =
known_django = django
known_djangoapp = model_utils
known_first_party = fonzie
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,DJANGOAPP,EDX,FIRSTPARTY,LOCALFOLDER

[pycodestyle]
exclude = .git,.tox,migrations
max-line-length = 99

[pydocstyle]
; D101 = Missing docstring in public class
; D104 = Missing docstring in public package
; D107 = Missing docstring in __init__
; D200 = One-line docstring should fit on one line with quotes
; D203 = 1 blank line required before class docstring
; D212 = Multi-line docstring summary should start at the first line
ignore = D101,D104,D107,D200,D203,D212
match-dir = (?!migrations)

[tool:isort]
known_third_party = rest_framework
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True
skip_glob = venv

[tool:pytest]
addopts =
    --reuse-db
    --no-migrations
    --cov /edx/app/fonzie/fonzie
    --cov-report term-missing
    --cov-report xml
testpaths =
    /edx/app/fonzie/tests
